--- a/Layouts/Main Menu Layout.uistate.xml
+++ b/Layouts/Main Menu Layout.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>308.871</position-x>
-        <position-y>436.943</position-y>
+        <position-y>476.005</position-y>
         <position-z>156.25</position-z>
         <lookat-x>308.871</lookat-x>
-        <lookat-y>436.943</lookat-y>
+        <lookat-y>476.005</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -16,6 +16,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <snap-width>32</snap-width>
     <snap-height>32</snap-height>
     <show-collision-polys>0</show-collision-polys>
+    <translucent-inactive-layers>0</translucent-inactive-layers>
     <properties>
         <property expanded="1" name="Layout properties" />
         <property expanded="0" name="Layout Size" />
